// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render comments label, when comments are loaded 1`] = `
<DocumentFragment>
  .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 50px;
}

.c1.info {
  background-color: #bedeed;
  border-left: 4px solid #1573a2;
}

.c1.info svg {
  fill: #1573a2;
}

.c1.warning {
  background-color: #ffeecc;
  border-left: 4px solid #ffa300;
}

.c1.warning svg {
  fill: #ffa300;
}

.c1.error {
  background-color: #ffd6d6;
  border-left: 4px solid #df0000;
}

.c1.error svg {
  fill: #df0000;
}

.c2 {
  margin: 12px 0 45px 12px;
}

.c3 {
  margin: 12px;
}

.c4 {
  font-family: GillSansMTStd-Medium;
  font-weight: 700;
  font-size: 16px;
  line-height: 16px;
  margin-bottom: 6px;
}

.c5 {
  font-family: GillSansMTStd-Medium;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
}

.c0 {
  margin-left: auto;
  margin-right: auto;
}

@media (min-width:768px) {
  .c0 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 56.2%;
  }
}

<div
    class="c0"
  >
    <div
      class="info c1"
    >
      <div
        class="c2"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 0C4.48 0 0 4.48 0 10C0 15.52 4.48 20 10 20C15.52 20 20 15.52 20 10C20 4.48 15.52 0 10 0ZM9 15V9H11V15H9ZM9 5V7H11V5H9Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          Real-name Commenting
        </div>
        <div
          class="c5"
        >
          We've changed our policy and from now on commenters will need to use their real names. If you've been using a pseudonym, please edit your screen name 
          <a
            href="https://home.thetimes.co.uk/"
          >
            here
          </a>
          . We believe this will ensure true debate.
        </div>
      </div>
    </div>
  </div>
  .c0 {
  margin-left: auto;
  margin-right: auto;
}

@media (min-width:768px) {
  .c0 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 56.2%;
  }
}

<div
    class="c0"
    id="comments-container"
  >
    <div>
      <script
        async="async"
        data-livefyre-url="dummy-article-id"
        data-post-id="dummy-article-id"
        data-post-url="https://www.thetimes.co.uk/article/dummy-article-id"
        data-seo-enabled="true"
        data-spotim-module="spotim-launcher"
        src="https://launcher.spot.im/spot/ReadOnlySpotID"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`User States No user state 1`] = `<DocumentFragment />`;

exports[`User States RA Users 1`] = `
<DocumentFragment>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 60px;
}

.c1 {
  font-family: TimesModern-Bold;
  font-size: 32px;
  line-height: 32px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  text-align: center;
  padding: 24px;
}

.c2 {
  font-family: TimesDigitalW04;
  font-weight: 400;
  font-size: 18px;
  line-height: 28px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  text-align: center;
  max-width: 660px;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #008387;
  color: white;
  font-family: GillSansMTStd-Medium;
  width: 127px;
  height: 48px;
  font-size: 16px;
  font-style: normal;
  font-weight: 500;
  line-height: 20px;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin: 24px;
}

@media (min-width:768px) {
  .c0 {
    padding: 88px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      Join the conversation
    </div>
    <div
      class="c2"
    >
      Commenting is only for subscribers. Upgrade your subscription to join the conversation.
    </div>
    <a
      class="c3"
      href="https://thetimes.co.uk/subscribe/digital?ILC=GB-TNL_The_Times-Conversion_Page-Homepage-2020"
    >
      Subscribe now
    </a>
  </div>
</DocumentFragment>
`;

exports[`User States enabled comments 1`] = `
<DocumentFragment>
  .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 50px;
}

.c1.info {
  background-color: #bedeed;
  border-left: 4px solid #1573a2;
}

.c1.info svg {
  fill: #1573a2;
}

.c1.warning {
  background-color: #ffeecc;
  border-left: 4px solid #ffa300;
}

.c1.warning svg {
  fill: #ffa300;
}

.c1.error {
  background-color: #ffd6d6;
  border-left: 4px solid #df0000;
}

.c1.error svg {
  fill: #df0000;
}

.c2 {
  margin: 12px 0 45px 12px;
}

.c3 {
  margin: 12px;
}

.c4 {
  font-family: GillSansMTStd-Medium;
  font-weight: 700;
  font-size: 16px;
  line-height: 16px;
  margin-bottom: 6px;
}

.c5 {
  font-family: GillSansMTStd-Medium;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
}

.c0 {
  margin-left: auto;
  margin-right: auto;
}

@media (min-width:768px) {
  .c0 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 56.2%;
  }
}

<div
    class="c0"
  >
    <div
      class="info c1"
    >
      <div
        class="c2"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 0C4.48 0 0 4.48 0 10C0 15.52 4.48 20 10 20C15.52 20 20 15.52 20 10C20 4.48 15.52 0 10 0ZM9 15V9H11V15H9ZM9 5V7H11V5H9Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          Real-name Commenting
        </div>
        <div
          class="c5"
        >
          We've changed our policy and from now on commenters will need to use their real names. If you've been using a pseudonym, please edit your screen name 
          <a
            href="https://home.thetimes.co.uk/"
          >
            here
          </a>
          . We believe this will ensure true debate.
        </div>
      </div>
    </div>
  </div>
  .c0 {
  margin-left: auto;
  margin-right: auto;
}

@media (min-width:768px) {
  .c0 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 56.2%;
  }
}

<div
    class="c0"
    id="comments-container"
  >
    <div>
      <script
        async="async"
        data-livefyre-url="dummy-article-id"
        data-post-id="dummy-article-id"
        data-post-url="https://www.thetimes.co.uk/article/dummy-article-id"
        data-seo-enabled="true"
        data-spotim-module="spotim-launcher"
        src="https://launcher.spot.im/spot/CurrentSpotID"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`disabled comments 1`] = `
<DocumentFragment>
  .c0 {
  margin-left: auto;
  margin-right: auto;
}

.c2 {
  color: #696969;
  font-family: "GillSansMTStd-Medium";
  font-size: 13px;
  margin: 0;
  padding-bottom: 30px;
  padding-top: 5px;
  text-align: center;
}

.c1 {
  color: #333333;
  font-family: "TimesModern-Bold";
  font-size: 27px;
  margin: 0;
  padding-bottom: 5px;
  padding-top: 30px;
  text-align: center;
}

@media (min-width:768px) {
  .c0 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 56.2%;
  }
}

<div
    class="c0"
  >
    <p
      class="c1"
    >
      Comments for this article have been turned off
    </p>
    <p
      class="c2"
    >
      Comments are subject to our community guidelines, which can be viewed 
      <a
        class="css-reset-4rbku5 css-cursor-18t94o4 css-text-901oao r-color-j7kcqb r-cursor-1loqt21 r-fontFamily-j2s0nr r-fontSize-n6v787 r-textDecorationLine-1ddef8g"
        data-focusable="true"
        dir="auto"
        href="https://www.thetimes.co.uk/article/f4024fbe-d989-11e6-9063-500e6740fc32"
        role="link"
      >
        here
      </a>
      .
    </p>
  </div>
</DocumentFragment>
`;

exports[`pre-switchover comments 1`] = `
<DocumentFragment>
  .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 50px;
}

.c1.info {
  background-color: #bedeed;
  border-left: 4px solid #1573a2;
}

.c1.info svg {
  fill: #1573a2;
}

.c1.warning {
  background-color: #ffeecc;
  border-left: 4px solid #ffa300;
}

.c1.warning svg {
  fill: #ffa300;
}

.c1.error {
  background-color: #ffd6d6;
  border-left: 4px solid #df0000;
}

.c1.error svg {
  fill: #df0000;
}

.c2 {
  margin: 12px 0 45px 12px;
}

.c3 {
  margin: 12px;
}

.c4 {
  font-family: GillSansMTStd-Medium;
  font-weight: 700;
  font-size: 16px;
  line-height: 16px;
  margin-bottom: 6px;
}

.c5 {
  font-family: GillSansMTStd-Medium;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
}

.c0 {
  margin-left: auto;
  margin-right: auto;
}

@media (min-width:768px) {
  .c0 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 56.2%;
  }
}

<div
    class="c0"
  >
    <div
      class="info c1"
    >
      <div
        class="c2"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 0C4.48 0 0 4.48 0 10C0 15.52 4.48 20 10 20C15.52 20 20 15.52 20 10C20 4.48 15.52 0 10 0ZM9 15V9H11V15H9ZM9 5V7H11V5H9Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          Real-name Commenting
        </div>
        <div
          class="c5"
        >
          We've changed our policy and from now on commenters will need to use their real names. If you've been using a pseudonym, please edit your screen name 
          <a
            href="https://home.thetimes.co.uk/"
          >
            here
          </a>
          . We believe this will ensure true debate.
        </div>
      </div>
    </div>
  </div>
  .c0 {
  margin-left: auto;
  margin-right: auto;
}

@media (min-width:768px) {
  .c0 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 56.2%;
  }
}

<div
    class="c0"
    id="comments-container"
  >
    <div>
      <script
        async="async"
        data-livefyre-url="dummy-article-id"
        data-post-id="dummy-article-id"
        data-post-url="https://www.thetimes.co.uk/article/dummy-article-id"
        data-seo-enabled="true"
        data-spotim-module="spotim-launcher"
        src="https://launcher.spot.im/spot/ReadOnlySpotID"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`single comment 1`] = `
<DocumentFragment>
  .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 50px;
}

.c1.info {
  background-color: #bedeed;
  border-left: 4px solid #1573a2;
}

.c1.info svg {
  fill: #1573a2;
}

.c1.warning {
  background-color: #ffeecc;
  border-left: 4px solid #ffa300;
}

.c1.warning svg {
  fill: #ffa300;
}

.c1.error {
  background-color: #ffd6d6;
  border-left: 4px solid #df0000;
}

.c1.error svg {
  fill: #df0000;
}

.c2 {
  margin: 12px 0 45px 12px;
}

.c3 {
  margin: 12px;
}

.c4 {
  font-family: GillSansMTStd-Medium;
  font-weight: 700;
  font-size: 16px;
  line-height: 16px;
  margin-bottom: 6px;
}

.c5 {
  font-family: GillSansMTStd-Medium;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
}

.c0 {
  margin-left: auto;
  margin-right: auto;
}

@media (min-width:768px) {
  .c0 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 56.2%;
  }
}

<div
    class="c0"
  >
    <div
      class="info c1"
    >
      <div
        class="c2"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 0C4.48 0 0 4.48 0 10C0 15.52 4.48 20 10 20C15.52 20 20 15.52 20 10C20 4.48 15.52 0 10 0ZM9 15V9H11V15H9ZM9 5V7H11V5H9Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          Real-name Commenting
        </div>
        <div
          class="c5"
        >
          We've changed our policy and from now on commenters will need to use their real names. If you've been using a pseudonym, please edit your screen name 
          <a
            href="https://home.thetimes.co.uk/"
          >
            here
          </a>
          . We believe this will ensure true debate.
        </div>
      </div>
    </div>
  </div>
  .c0 {
  margin-left: auto;
  margin-right: auto;
}

@media (min-width:768px) {
  .c0 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 56.2%;
  }
}

<div
    class="c0"
    id="comments-container"
  >
    <div>
      <script
        async="async"
        data-livefyre-url="dummy-article-id"
        data-post-id="dummy-article-id"
        data-post-url="https://www.thetimes.co.uk/article/dummy-article-id"
        data-seo-enabled="true"
        data-spotim-module="spotim-launcher"
        src="https://launcher.spot.im/spot/CurrentSpotID"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`window listeners added all listeners added 1`] = `
Array [
  "spot-im-current-user-typing-start",
  "spot-im-current-user-sent-message",
  "spot-im-notification-drop-down-link",
  "spot-im-user-up-vote-click",
  "spot-im-sort-by-select",
  "spot-im-user-clicked-reply",
  "spot-im-clicked-settings",
  "spot-im-user-notifications-click",
  "spot-im-open-user-profile",
  "spot-im-share-type",
]
`;

exports[`zero comments 1`] = `
<DocumentFragment>
  .c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 50px;
}

.c1.info {
  background-color: #bedeed;
  border-left: 4px solid #1573a2;
}

.c1.info svg {
  fill: #1573a2;
}

.c1.warning {
  background-color: #ffeecc;
  border-left: 4px solid #ffa300;
}

.c1.warning svg {
  fill: #ffa300;
}

.c1.error {
  background-color: #ffd6d6;
  border-left: 4px solid #df0000;
}

.c1.error svg {
  fill: #df0000;
}

.c2 {
  margin: 12px 0 45px 12px;
}

.c3 {
  margin: 12px;
}

.c4 {
  font-family: GillSansMTStd-Medium;
  font-weight: 700;
  font-size: 16px;
  line-height: 16px;
  margin-bottom: 6px;
}

.c5 {
  font-family: GillSansMTStd-Medium;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
}

.c0 {
  margin-left: auto;
  margin-right: auto;
}

@media (min-width:768px) {
  .c0 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 56.2%;
  }
}

<div
    class="c0"
  >
    <div
      class="info c1"
    >
      <div
        class="c2"
      >
        <svg
          fill="none"
          height="20"
          viewBox="0 0 20 20"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 0C4.48 0 0 4.48 0 10C0 15.52 4.48 20 10 20C15.52 20 20 15.52 20 10C20 4.48 15.52 0 10 0ZM9 15V9H11V15H9ZM9 5V7H11V5H9Z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <div
        class="c3"
      >
        <div
          class="c4"
        >
          Real-name Commenting
        </div>
        <div
          class="c5"
        >
          We've changed our policy and from now on commenters will need to use their real names. If you've been using a pseudonym, please edit your screen name 
          <a
            href="https://home.thetimes.co.uk/"
          >
            here
          </a>
          . We believe this will ensure true debate.
        </div>
      </div>
    </div>
  </div>
  .c0 {
  margin-left: auto;
  margin-right: auto;
}

@media (min-width:768px) {
  .c0 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 56.2%;
  }
}

<div
    class="c0"
    id="comments-container"
  >
    <div>
      <script
        async="async"
        data-livefyre-url="dummy-article-id"
        data-post-id="dummy-article-id"
        data-post-url="https://www.thetimes.co.uk/article/dummy-article-id"
        data-seo-enabled="true"
        data-spotim-module="spotim-launcher"
        src="https://launcher.spot.im/spot/CurrentSpotID"
      />
    </div>
  </div>
</DocumentFragment>
`;
